src/objects/P7S1_Emp__c.object
<CustomObject>
    <description>Mitarbeiter des P7S1-Konzerns.
meistens auch User mit Lizenz in Salesforce
enthalten auch externe Mitarbeiter</description>
    <fields>
        <fullName>P7S1_AP_Usercheck__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Falls vom Manager abweichender Ansprechpartner für Userüberprüfung, bitte hier eintragen</inlineHelpText>
        <label>Ansprechpartner für Userprüfung</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>Zu überprüfende Mitarbeiter</relationshipLabel>
        <relationshipName>MitarbeiterUsercheck</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountId__c</fullName>
        <formula>P7S1_Comp__r.P7S1_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BestaetigtAm__c</fullName>
        <label>Bestätigt am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_CaseRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link auf das Ticket, in dem der Mitarbeiter beantragt wurde. Für Sammeltickets.</description>
        <inlineHelpText>Hier das Ticket verlinken, in dem der Mitarbeiter beantragt wurde.</inlineHelpText>
        <label>Angefordert in</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mitarbeiter</relationshipLabel>
        <relationshipName>Mitarbeiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckAccountEmpContact__c</fullName>
        <description>Account des Mitarbeiters abweichend vom Account des Kontakts</description>
        <formula>IF ( ISBLANK(P7S1_Contact__c) ,
  &apos;&apos;,
  IF( P7S1_Comp__r.P7S1_Account__c = P7S1_Contact__r.AccountId, 
    &apos;&apos;,
    &apos;unterschiedlich: &apos; + P7S1_Comp__r.P7S1_Account__r.Name + &apos; / &apos; + P7S1_Contact__r.Account.Name
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account des Mitarbeiters abweichend vom Account des Kontakts</inlineHelpText>
        <label>Check Account Emp Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckActive__c</fullName>
        <formula>If (P7S1_IsActive__c != P7S1_User__r.IsActive,
&apos;Aktiv unterschiedlich&apos;,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckContactSphere__c</fullName>
        <description>Kontakt nicht in SomDe Sphäre</description>
        <formula>IF ( 
P7S1_Sync__c = true  &amp;&amp;  P7S1_Contact__r.P7S1_Sphere__c != &apos;SomDe&apos;,
P7S1_Contact__r.P7S1_Sphere__c,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kontakt nicht in SomDe Sphäre</inlineHelpText>
        <label>Check Contact Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckEmailBenutzername__c</fullName>
        <description>Benutzername abweichend zu E-Mail (am Mitarbeiter )</description>
        <formula>IF (
  P7S1_IsActive__c
  &amp;&amp; LEFT(P7S1_Username__c,10) != &apos;interface.&apos;
  &amp;&amp; P7S1_Username__c != P7S1_Email__c
  &amp;&amp; P7S1_Username__c != &apos;p7s1.&apos; &amp; P7S1_Email__c
,
&apos;abweichend&apos;,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Benutzername abweichend zu E-Mail (am Mitarbeiter)</inlineHelpText>
        <label>Check Email Benutzername</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckEmail__c</fullName>
        <description>E-Mail am User und Mitarbeiter unterschiedlich.</description>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
&apos;&apos; , 
 IF ( 
  P7S1_IsActive__c 
  &amp;&amp; P7S1_User__r.Email != P7S1_Email__c ,

  &apos;U:&apos; &amp; P7S1_User__r.Email &amp; &apos; vs. M:&apos; &amp; P7S1_Email__c, 
  &apos;&apos; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>E-Mail am User und Mitarbeiter unterschiedlich.</inlineHelpText>
        <label>Check E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckFirma1__c</fullName>
        <description>Prüft ob Firma am User unterschiedlich zu Firma am Mitarbeiter</description>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
&apos;&apos; , 
  IF (  P7S1_User__r.CompanyName  &lt;&gt;  P7S1_Comp__r.Name , 
    P7S1_User__r.CompanyName &amp; &apos;/&apos; &amp; P7S1_Comp__r.Name, 
    &quot;&quot;
  ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prüft ob Firma am User unterschiedlich zu Firma am Mitarbeiter</inlineHelpText>
        <label>Check Firma 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckFirma2__c</fullName>
        <description>Prüft, ob am Mitarbeiter &quot;Firma&quot; unterschiedlich zu &quot;Firma (Text)&quot;</description>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
  &apos;&apos; , 
  IF (NOT(ISBLANK(P7S1_CompText__c)) &amp;&amp; P7S1_Comp__r.Name &lt;&gt;  P7S1_CompText__c ,
    P7S1_Comp__r.Name &amp; &quot;/&quot; &amp; P7S1_CompText__c,
  &quot;&quot;
  ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Prüft, ob am Mitarbeiter &quot;Firma&quot; unterschiedlich zu &quot;Firma (Text)&quot;</inlineHelpText>
        <label>Check Firma 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckManager__c</fullName>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
  &apos;&apos; , 
  IF ( P7S1_User__r.ManagerId &lt;&gt; P7S1_Manager__r.P7S1_User__c,
    P7S1_User__r.Manager.LastName &amp; &apos;/&apos; &amp; P7S1_Manager__r.P7S1_Lastname__c,
    IF ( P7S1_Manager__r.P7S1_IsActive__c = false , 
      &apos;Manager inaktiv&apos; , 
    &apos;&apos;
    )
  )
)</formula>
        <label>Check Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckProfile__c</fullName>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
&apos;&apos; , 
IF ( ISBLANK(P7S1_User__r.ProfileId), 
IF (ISBLANK(TEXT(P7S1_Profile__c)), 
&apos;&apos;, 
&apos;leer /&apos; &amp; TEXT(P7S1_Profile__c) 
), 
IF ( P7S1_User__r.Profile.Name != TEXT(P7S1_Profile__c), 
P7S1_User__r.Profile.Name &amp; &apos;/&apos; &amp; TEXT(P7S1_Profile__c), 
&apos;&apos; 
) 
) 
)</formula>
        <label>Check Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckRole__c</fullName>
        <formula>IF ( ISBLANK(P7S1_User__c) ,
  &apos;&apos; ,
  IF ( ISBLANK(P7S1_User__r.UserRoleId),
    IF (ISBLANK(TEXT(P7S1_Role__c)),
      &apos;&apos;,
      &apos;leer /&apos; &amp; TEXT(P7S1_Role__c)
    ),
    IF ( P7S1_User__r.UserRole.DeveloperName != TEXT(P7S1_Role__c),
      P7S1_User__r.UserRole.DeveloperName &amp; &apos;/&apos; &amp; TEXT(P7S1_Role__c),
      &apos;&apos;
    )
  )
)</formula>
        <label>Check Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckSalesforceZugang__c</fullName>
        <description>Kontrolle, ob der User weiterhin den Salesforce-Zugang benötig. Intervall: Jährlich (somit 2015/2016 aktuell)</description>
        <inlineHelpText>Kontrolle, ob der User weiterhin den Salesforce-Zugang benötig. Intervall: Jährlich (somit 2015/2016 aktuell)</inlineHelpText>
        <label>Check Salesforce Zugang</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce weiterhin</fullName>
                </value>
                <value>
                    <fullName>wird nicht mehr benötigt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_CheckTeamNr__c</fullName>
        <description>Checkt DWH Felder am User vs.Mitarbeiter/Team</description>
        <formula>IF (
  P7S1_User__r.SomTv_SalesTeam_Id__c = P7S1_Team__r.P7S1_TeamNo__c
&amp;&amp; TEXT(P7S1_User__r.SomTv_SalesTeam__c) = P7S1_Team__r.Name,

 &apos;&apos; ,

P7S1_User__r.SomTv_SalesTeam_Id__c &amp; &apos; / &apos; &amp; TEXT(P7S1_User__r.SomTv_SalesTeam__c) &amp; BR() &amp;
 P7S1_Team__r.P7S1_TeamNo__c  &amp; &apos; / &apos; &amp;   P7S1_Team__r.Name

)</formula>
        <inlineHelpText>Checkt DWH Felder am User vs.Mitarbeiter/Team</inlineHelpText>
        <label>Check Team Nr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckUnit__c</fullName>
        <description>Links =&gt; User / Rechts =&gt; Mitarbeiter (bei Abweichung)</description>
        <formula>IF ( ISBLANK(P7S1_User__c) , 
&apos;&apos; , 
IF ( ISBLANK(P7S1_User__r.P7S1_Unit__c), 
IF (ISBLANK(TEXT(P7S1_Unit__c)), 
&apos;&apos;, 
&apos;leer / &apos; &amp; TEXT(P7S1_Unit__c) 
), 
IF ( P7S1_User__r.P7S1_Unit__c != TEXT(P7S1_Unit__c), 
P7S1_User__r.P7S1_Unit__c &amp; &apos; / &apos; &amp; TEXT(P7S1_Unit__c), 
&apos;&apos; 
) 
) 
)</formula>
        <inlineHelpText>Links =&gt; User / Rechts =&gt; Mitarbeiter (bei Abweichung)</inlineHelpText>
        <label>Check Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckUserCountry__c</fullName>
        <description>Land des Users. Sehr wichtig für Advendio Billing. Muss dem Wert entsprechen, der im CustomSetting &quot;VAT&quot; definiert ist. Relevant für User die als Betreuer PAM in Mediakampagne ausgewählt sind.</description>
        <formula>IF (  P7S1_IsActive__c = TRUE
  &amp;&amp; BEGINS(TEXT(P7S1_Profile__c), &apos;SomDig&apos;)
  &amp;&amp; P7S1_User__r.Country != &apos;Deutschland&apos;,
  &apos;Land nicht Deutschland bei SomDig-User&apos;,
  &apos;&apos;
)</formula>
        <inlineHelpText>Land des Users. Sehr wichtig für Advendio Billing. Muss dem Wert entsprechen, der im CustomSetting &quot;VAT&quot; definiert ist. Relevant für User die als Betreuer PAM in Mediakampagne ausgewählt sind.</inlineHelpText>
        <label>Check User Land</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CheckUserEmpId__c</fullName>
        <description>Link Mitarbeiter =&gt; User und User =&gt; Mitarbeiter korrekt?</description>
        <formula>IF (
  P7S1_Sync__c = true
  &amp;&amp;
  LEFT(P7S1_User__r.P7S1_Emp__c,15) != Id,

&apos;different: &apos; + P7S1_User__r.P7S1_Emp__c + &apos;-&apos; + Id,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link Mitarbeiter =&gt; User und User =&gt; Mitarbeiter korrekt?</inlineHelpText>
        <label>Check User Mitarbeiter-Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Colleague__c</fullName>
        <label>Kollege</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Comment__c</fullName>
        <label>Bemerkungen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_CompName__c</fullName>
        <formula>P7S1_Comp__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firmenname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CompText__c</fullName>
        <label>Firma (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Comp__c</fullName>
        <label>Firma</label>
        <referenceTo>P7S1_Comp__c</referenceTo>
        <relationshipLabel>Mitarbeiter</relationshipLabel>
        <relationshipName>Mitarbeiter</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mitarbeiter</relationshipLabel>
        <relationshipName>Mitarbeiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_DateExit__c</fullName>
        <description>Austrittsdatum</description>
        <inlineHelpText>Austrittsdatum</inlineHelpText>
        <label>Austrittsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_Department__c</fullName>
        <label>Abteilung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Email__c</fullName>
        <label>E-Mail</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_EmpNo__c</fullName>
        <description>fortlaufende Nummer. Wird u.a. von DWH benötigt (als Verkäufer-Id)</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>fortlaufende Nummer. Wird u.a. von DWH benötigt (als Verkäufer-Id)</inlineHelpText>
        <label>Mitarbeiter-Nummer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>P7S1_Firstname__c</fullName>
        <label>Vorname</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_GeheZuAdv__c</fullName>
        <description>Zuweisung Advendio Lizenzen (Paket)</description>
        <formula>HYPERLINK(&quot;/ui/setup/mfpackage/UserLicenses/e?allPackageId=033A0000000IVld&amp;packageLicenseId=050D0000000Tgke&amp;retURL=%2Fui%2Fsetup%2Fmfpackage%2FUserLicenses%2Fd%3FallPackageId%3D033A0000000IVld%26packageLicenseId%3D050D0000000Tgke%26retURL%3D%252F&quot;&amp;Id , &quot;Advendio Lizenzverwaltung&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuweisung Advendio Lizenzen (Paket)</inlineHelpText>
        <label>Gehe zu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Gehe_zum__c</fullName>
        <description>Zuweisung Berechtigunssätze (Permission Sets)</description>
        <formula>HYPERLINK(&quot;/apex/permissioner__PermissionSet?sfdc.tabName=01r57000000Q500&quot;, &quot;Permissioner&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuweisung Berechtigunssätze (Permission Sets)</inlineHelpText>
        <label>Gehe zum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aktiviert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_IsTeamLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnet einen Mitarbeiter als PAM TeamLead. Siehe Ticket 4864.</description>
        <inlineHelpText>Kennzeichnet einen Mitarbeiter als PAM TeamLead.</inlineHelpText>
        <label>Is TeamLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Konzernmitglied__c</fullName>
        <description>Mitarbeiter gehört zu Firma die P7S1 Konzernmitglied ist</description>
        <formula>P7S1_Comp__r.P7S1_Konzernmitglied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mitarbeiter gehört zu Firma die P7S1 Konzernmitglied ist</inlineHelpText>
        <label>P7S1 Konzernmitglied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Lastname__c</fullName>
        <label>Nachname</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ManagerText__c</fullName>
        <label>Manager (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auswahl des Vorgesetzten Mitarbeiters</description>
        <inlineHelpText>Auswahl des Vorgesetzten Mitarbeiters</inlineHelpText>
        <label>Manager</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>Team</relationshipLabel>
        <relationshipName>Mitarbeiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_MeineMitarbeiter__c</fullName>
        <description>Zeigt die zugeweisenen bzw. eigenen Mitarbeiter eines Users an.</description>
        <formula>IF (ISBLANK( P7S1_AP_Usercheck__r.P7S1_User__c ),

P7S1_Manager__r.P7S1_User__c =  $User.Id,
 P7S1_AP_Usercheck__r.P7S1_User__c  =  $User.Id 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meine Mitarbeiter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_PackageUser__c</fullName>
        <description>Zeigt verwendete ADvendio Lizenzen an.</description>
        <formula>HYPERLINK(&quot;/apex/P7S1_PackageUser&quot;, &quot;ADvendio Lizenzübersicht&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt verwendete ADvendio Lizenzen an.</inlineHelpText>
        <label>Gehe zu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_Profile__c</fullName>
        <label>Profil</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DA_Default</fullName>
                </value>
                <value>
                    <fullName>MA_Default</fullName>
                </value>
                <value>
                    <fullName>Max_Default</fullName>
                </value>
                <value>
                    <fullName>P7S1_Applications</fullName>
                </value>
                <value>
                    <fullName>P7S1_Interface</fullName>
                </value>
                <value>
                    <fullName>P7S1_NoRights</fullName>
                </value>
                <value>
                    <fullName>PSD_Default</fullName>
                </value>
                <value>
                    <fullName>SE_Default</fullName>
                </value>
                <value>
                    <fullName>SE_ReadOnly</fullName>
                </value>
                <value>
                    <fullName>Som_Lic_Default</fullName>
                </value>
                <value>
                    <fullName>Som_ReadOnly</fullName>
                </value>
                <value>
                    <fullName>SomDig_AdTech</fullName>
                </value>
                <value>
                    <fullName>SomDig_BI</fullName>
                </value>
                <value>
                    <fullName>SomDig_Billing</fullName>
                </value>
                <value>
                    <fullName>SomDig_PAM</fullName>
                </value>
                <value>
                    <fullName>SomDig_PM</fullName>
                </value>
                <value>
                    <fullName>SomDig_Sales</fullName>
                </value>
                <value>
                    <fullName>SomTv_ADFactory</fullName>
                </value>
                <value>
                    <fullName>SomTv_Conversion</fullName>
                </value>
                <value>
                    <fullName>SomTv_Marketing</fullName>
                </value>
                <value>
                    <fullName>SomTv_RM</fullName>
                </value>
                <value>
                    <fullName>SomTv_Sales</fullName>
                </value>
                <value>
                    <fullName>SomTv_SalesManagement</fullName>
                </value>
                <value>
                    <fullName>SomTv_SalesSteering</fullName>
                </value>
                <value>
                    <fullName>SomTv_TeamCRM</fullName>
                </value>
                <value>
                    <fullName>Sports_Default</fullName>
                </value>
                <value>
                    <fullName>Star_Default</fullName>
                </value>
                <value>
                    <fullName>Systemadministrator</fullName>
                </value>
                <value>
                    <fullName>Ven_Controlling</fullName>
                </value>
                <value>
                    <fullName>Ven_DataManager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_RelevantUserpruefung__c</fullName>
        <formula>AND(
DATEVALUE(CreatedDate) &lt; DATE(2017,7,1),
P7S1_IsActive__c == true
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relevant für Userprüfung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Role__c</fullName>
        <label>Rolle</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>P7S1_Unit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AdF_Admin</fullName>
                </value>
                <value>
                    <fullName>AdF_BrandIntegration</fullName>
                </value>
                <value>
                    <fullName>AdF_Conception</fullName>
                </value>
                <value>
                    <fullName>AdF_ConceptSales</fullName>
                </value>
                <value>
                    <fullName>AdF_Director</fullName>
                </value>
                <value>
                    <fullName>AdF_FinanceSteering</fullName>
                </value>
                <value>
                    <fullName>AdF_GF</fullName>
                </value>
                <value>
                    <fullName>AdF_LicensingSales</fullName>
                </value>
                <value>
                    <fullName>AdF_MediaContentManagement</fullName>
                </value>
                <value>
                    <fullName>AdF_ProjektManagement</fullName>
                </value>
                <value>
                    <fullName>Aer</fullName>
                </value>
                <value>
                    <fullName>App_ExternalUsers</fullName>
                </value>
                <value>
                    <fullName>App_TechnicalUsers</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Auto_Controlling</fullName>
                </value>
                <value>
                    <fullName>Auto_Sales</fullName>
                </value>
                <value>
                    <fullName>Auto_Steering</fullName>
                </value>
                <value>
                    <fullName>Com_7CommerceInvestments</fullName>
                </value>
                <value>
                    <fullName>Comm</fullName>
                </value>
                <value>
                    <fullName>Comm_Controlling</fullName>
                </value>
                <value>
                    <fullName>Comm_Sales</fullName>
                </value>
                <value>
                    <fullName>Comm_Steering</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>coops</fullName>
                </value>
                <value>
                    <fullName>coops_Controlling</fullName>
                </value>
                <value>
                    <fullName>coops_Sales</fullName>
                </value>
                <value>
                    <fullName>coops_Steering</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DA_7Innovate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <label>Sphäre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aer</fullName>
                </value>
                <value>
                    <fullName>Sgn</fullName>
                </value>
                <value>
                    <fullName>SomAt</fullName>
                </value>
                <value>
                    <fullName>SomDe</fullName>
                </value>
                <value>
                    <fullName>Ven</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_StarteUserDeaktivieren__c</fullName>
        <description>Startet den Wizard zum Entfernen des Users aus Teams</description>
        <formula>IF ( ISBLANK ( P7S1_User__c ) ,  &apos;nicht möglich, da kein Benutzer (User) zugeordnet ist.&apos; , HYPERLINK(&apos;/setup/user/userdeactivate.jsp?retURL=%2F&apos;&amp; P7S1_User__c &amp; &apos;%3Fnoredirect%3D1&amp;id=&apos; &amp;  P7S1_User__c , &apos;Wizard&apos; , &apos;_blank&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Startet den Wizard zum Entfernen des Users aus Teams</inlineHelpText>
        <label>Starte User Deaktivieren</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mitarbeiter-Team</description>
        <inlineHelpText>Mitarbeiter-Team</inlineHelpText>
        <label>Mitarbeiter-Team</label>
        <referenceTo>P7S1_Team__c</referenceTo>
        <relationshipLabel>Mitarbeiter</relationshipLabel>
        <relationshipName>Mitarbeiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Title__c</fullName>
        <label>Position</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>12Auto</fullName>
                </value>
                <value>
                    <fullName>71M</fullName>
                </value>
                <value>
                    <fullName>7Commerce</fullName>
                </value>
                <value>
                    <fullName>7coops</fullName>
                </value>
                <value>
                    <fullName>7Games</fullName>
                </value>
                <value>
                    <fullName>7Life</fullName>
                </value>
                <value>
                    <fullName>7NXT</fullName>
                </value>
                <value>
                    <fullName>7Screen</fullName>
                </value>
                <value>
                    <fullName>7Sports</fullName>
                </value>
                <value>
                    <fullName>7Travel</fullName>
                </value>
                <value>
                    <fullName>7Ventures</fullName>
                </value>
                <value>
                    <fullName>Aeria</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>CCO Sales</fullName>
                </value>
                <value>
                    <fullName>D&amp;A</fullName>
                </value>
                <value>
                    <fullName>d&amp;a Sales</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>glomex</fullName>
                </value>
                <value>
                    <fullName>Licensing</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Magic</fullName>
                </value>
                <value>
                    <fullName>marktguru</fullName>
                </value>
                <value>
                    <fullName>Maxdome</fullName>
                </value>
                <value>
                    <fullName>- No Unit -</fullName>
                </value>
                <value>
                    <fullName>PSD Branded Reselling</fullName>
                </value>
                <value>
                    <fullName>PSD Digital Entertainment</fullName>
                </value>
                <value>
                    <fullName>Puls4</fullName>
                </value>
                <value>
                    <fullName>Starwatch</fullName>
                </value>
                <value>
                    <fullName>Studio71</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_UserLink__c</fullName>
        <formula>IF( ISBLANK(P7S1_User__c),
  &apos;&apos;,
  HYPERLINK(&apos;/&apos; +  P7S1_User__c + &apos;?noredirect=1&apos; ,  P7S1_Firstname__c + &apos; &apos; + P7S1_Lastname__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benutzer (User)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_UserType__c</fullName>
        <description>Typ des Benutzers, zur Unterscheidung von &quot;echten&quot; Benutzers und den unterschiedlichen System-Benutzern (Test, Import, Interface)</description>
        <inlineHelpText>Typ des Benutzers, zur Unterscheidung von &quot;echten&quot; Benutzers und den unterschiedlichen System-Benutzern (Test, Import, Interface)</inlineHelpText>
        <label>User-Typ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User_internal</fullName>
                    <color>#009900</color>
                    <label>User_internal</label>
                </value>
                <value>
                    <fullName>User_external</fullName>
                    <color>#78C953</color>
                    <label>User_external</label>
                </value>
                <value>
                    <fullName>System_Interface</fullName>
                    <color>#990000</color>
                    <label>System_Interface</label>
                </value>
                <value>
                    <fullName>System_Import</fullName>
                    <color>#CC0000</color>
                    <label>System_Import</label>
                </value>
                <value>
                    <fullName>System_Tester</fullName>
                    <color>#FF6666</color>
                    <label>System_Tester</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benutzer (Person)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mitarbeiter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Username__c</fullName>
        <description>Salesforce-Benutzername. Auch in Sandboxen OHNE Zusatz des Sandboxnamens. Die Synchronisierung hängt am User automatisch den Sandboxnamen an.</description>
        <inlineHelpText>Salesforce-Benutzername. Auch in Sandboxen OHNE Zusatz des Sandboxnamens. Die Synchronisierung hängt am User automatisch den Sandboxnamen an.</inlineHelpText>
        <label>Benutzername</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_WindowsID__c</fullName>
        <label>Windows-Kennung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_KontaktberichtTeilnehmerVon__c</fullName>
        <formula>IF ( ISPICKVAL( P7S1_User__r.P7S1_Sphere__c , &apos;SomAt&apos;) , &apos;AT&apos; ,
  IF (  P7S1_Comp__r.Name =&apos;SevenOne AdFactory GmbH&apos; , &apos;AdFactory&apos; ,
    IF ( TEXT(P7S1_Profile__c) = &apos;SomTv_Sales&apos; , &apos;TV&apos; ,
      IF ( TEXT ( P7S1_Profile__c ) = &apos;SomDig_Sales&apos; , &apos;Digital&apos; , &apos;&apos;
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kontaktbericht Teilnehmer von</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ProRexId__c</fullName>
        <description>liefert ans DWH die alte ProRex-Id, solange alter DWH-SST nicht umgestellt ist auf Salesforce-Id des Mitarbeiters</description>
        <formula>P7S1_User__r.ProRexId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>liefert ans DWH die alte ProRex-Id, solange alter DWH-SST nicht umgestellt ist auf Salesforce-Id des Mitarbeiters</inlineHelpText>
        <label>Verkäufer-Id</label>
        <type>Text</type>
    </fields>
</CustomObject>